refactory posts
